internet shop (just page with products by parameters and own product page)

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <jstl.version>1.2</jstl.version>
         <mysql-connector-java.version>5.1.35</mysql-connector-java.version>
         <jsp-api.version>2.0</jsp-api.version>
+        <spring.version>4.1.4.RELEASE</spring.version>
     </properties>
 
 
@@ -70,6 +71,28 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
     <build>
