--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:mysql://127.0.0.1:3306/ACP6
+db.url=jdbc:mysql://127.0.0.1:3306/internetshop
 db.driver=com.mysql.jdbc.Driver
 db.user=root
 db.pass=root
